# polymarket-trader

./: .env.example  .gitignore  README.md  monitor.yaml  pyproject.toml
examples/: analyze_event.py  iran_strikes_analysis.py  manage_portfolio.py  merge_positions.py  monitor_market.py  simulate_isolated_move.py
src/polymarket_trader/: __init__.py
src/polymarket_trader/analysis/: __init__.py  term_structure.py
src/polymarket_trader/data/: __init__.py  authenticated_client.py  models.py  polymarket_client.py  transformer.py
src/polymarket_trader/execution/: __init__.py  exit_rules.py  rebalancing.py
src/polymarket_trader/microstructure/: __init__.py  constraints.py
src/polymarket_trader/models/: __init__.py  bayesian_hazard.py  hazard.py
src/polymarket_trader/notifications/: __init__.py  telegram.py
src/polymarket_trader/optimization/: __init__.py  curve_fitting.py  portfolio.py  simple_portfolio.py
src/polymarket_trader/risk/: __init__.py  hedging.py
src/polymarket_trader/state/: __init__.py  estimator_state.py  portfolio_state.py
tests/: __init__.py  test_bayesian_hazard.py  test_curve_fitting.py  test_execution.py  test_hazard.py  test_hedging.py  test_incremental_portfolio.py  test_microstructure.py  test_portfolio.py
