[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-trader"
version = "0.1.0"
description = "Event-time term structure arbitrage system for binary markets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Polymarket Trader"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "cvxpy>=1.4.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "httpx[http2]>=0.25.0",
    "py-clob-client>=0.34.0",
    "python-dotenv>=1.0.0",
    "web3>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["D100", "D104", "ANN101", "ANN102", "ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
